--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,7 +3,7 @@
     <div class="container">
         <a href="{% url 'home' %}" class="header__logo">
             <img src="{% static 'images/man.svg' %}" />
-            <h1>MAISHA</h1>
+            <h1>HELNET</h1>
         </a>
         <form class="header__search" method="GET" action="{% url 'home' %}">
             <label>
