--- a/templates/main.html
+++ b/templates/main.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
-    <title>Maisha - Conncect to the world!</title>
+    <title>HELNET - Connect to the world!</title>
 </head>
 
 <body>
